MOYO Header implementation

--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,42 @@
     <title>Moyo header</title>
     <link
       rel="stylesheet"
-      href="./style.css"
+      href="style.css"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
-    <h1>Moyo header</h1>
+    <header class="header">
+      <img
+        src="images/logo.png"
+        class="logo"
+        alt="MOYO LOGO"
+      />
+      <nav class="roboto-500">
+        <ul class="menu">
+          <li class="menu-item"><a href="#" class="is-active">Apple</a></li>
+          <li class="menu-item"><a href="#">Samsung</a></li>
+          <li class="menu-item"><a href="#">Smartphones</a></li>
+          <li class="menu-item"><a href="#" data-qa="hover">Laptops & Computers</a></li>
+          <li class="menu-item"><a href="#">Gadgets</a></li>
+          <li class="menu-item"><a href="#">Tablets</a></li>
+          <li class="menu-item"><a href="#">Photo</a></li>
+          <li class="menu-item"><a href="#">Video</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 </html>
